[package]
name = "egui-mobile-test"
version = "0.1.0"
authors = ["Lucas Meurer <lucasmeurer96@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "egui-mobile-test-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-dependencies = [
    "com.google.android.material:material:1.8.0",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[dependencies]
log = "0.4.14"
chrono = "0.4"
eframe = { version = "0.28", default-features = false, features = ["wgpu", "default_fonts", "android-native-activity"] }
egui_demo_lib = "0.28"
winit = "0.30"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"

[patch.crates-io]
eframe = { git = "https://github.com/lucasmerlin/egui", branch = "add-ios-pipeline"}
egui_demo_lib = { git = "https://github.com/lucasmerlin/egui", branch = "add-ios-pipeline"}

#eframe = {git = "https://github.com/emilk/egui", branch = "master"}
#
#eframe = { path = "../../IdeaProjects/egui/crates/eframe" }
#egui_demo_lib = { path = "../../IdeaProjects/egui/crates/egui_demo_lib" }
##winit = { git = "https://github.com/lucasmerlin/winit", branch = "geph-v0.29.x" }
#winit = { path = "../../IdeaProjects/github/winit"}